nemo/llamastack/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    "app.kubernetes.io/name": "nemo-llamastack"
    "app.kubernetes.io/instance": "nemo-llamastack"
  annotations:
    "openshift.io/scc": "nonroot"
  name: llamastack
  namespace: nemo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 0
  selector:
    matchLabels:
      "app": "nemo-llamastack"
      "app.kubernetes.io/name": "nemo-llamastack"
      "app.kubernetes.io/instance": "nemo-llamastack"
  template:
    metadata:
      labels:
        "app": "nemo-llamastack"
        "app.kubernetes.io/name": "nemo-llamastack"
        "app.kubernetes.io/instance": "nemo-llamastack"
      annotations:
        "openshift.io/scc": "nonroot"
    spec:
      containers:
        - name: llamastack-ctr
          image: llamastack/distribution-nvidia
          imagePullPolicy: Always
#          volumeMounts:
#            - name: run-config
#              mountPath: /root/my-run.yaml
#              subPath: run.yaml
          ports:
            - containerPort: 8321
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
#      volumes:
#        - name: run-config
#          configMap:
#            name: llamastack-config
      imagePullSecrets:
        - name: ngc-secret
